# cvcap

./: .env.old  .gitignore  Cargo.toml  LICENCE.md  README.md  cvcap.toml.temp  decisions.md  release_notes.md  todo.md
.github/workflows/: release.yml
cli/: Cargo.toml  test.db
cli/src/: app.rs  clipboard.rs  colour_output.rs  lib.rs  main.rs  progress_indicator.rs
cli/src/app/: action.rs  bookmark.rs  cli.rs  config.rs  context.rs  creds.rs  interaction.rs  mod.rs
cli/src/app/action/: add.rs  add_bookmark.rs  logout.rs  mod.rs  show_status.rs  sync.rs
cli/tests/: cli_integration_tests.rs  integration_tests.rs  test_creds.rs
cli/tests/data/: task.md
doc/: decisions.md  release_notes.md  sync.md
src/: api_client.rs  checkvist_types.rs  colour_output.rs  lib.rs  main.rs  persistent_checkvist_client.rs  progress_indicator.rs  sqlite.rs  sqlite_client.rs  sqlite_store.rs  task_sync.rs
src/app/: cli.rs  config.rs  creds.rs  mod.rs
src/app/action/: add.rs  logout.rs  show_status.rs
src/app/cmd/: add.rs  logout.rs  mod.rs  show_status.rs
src/sqlite/: sqlite_client.rs  sqlite_store.rs
tests/: api.rs  api_client.rs  checklistclient.rs  checkvist_type_serialisation.rs  cli_integration_tests.rs  db_persistence.rs  db_tests.rs  lib_tests.rs  persistence.rs  persistence_client.rs  serialisation.rs  sqlite_client.rs  sqlite_store.rs  test_config.rs  test_creds.rs  utils.rs
tests/data/: checklists.json  config.toml  test.db
