[workspace]
members = ["cli"]

[package]
name = "cvapi"
version = "0.1.0"
edition = "2021"
authors = [ "Crispin Bennett" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
ureq = {version = "2.4.0", features = ["json"]}
serde = {version = "1.0.137",features=["derive"]} 
serde_json = "1.0.81"
anyhow = "1.0.58" 
log = "0.4.17"
sqlx = {version = "0.6.1", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = {version = "1.20.1", features = ["full"]}

[dev-dependencies]
mockito = "0.31.0"
