[workspace]
members = ["cli"]

[package]
name = "cvapi"
version = "0.1.0"
edition = "2021"
authors = ["Crispin Bennett"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
ureq = { version = "2.4.0", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0.58"
log = "0.4.17"
chrono = { version = "0.4.22", features = ["serde"] }
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }

[dev-dependencies]
mockall = "0.11.2"
mockito = "0.31.0"
temp-dir = "0.1.11"